--- a/index.css
+++ b/index.css
@@ -66,53 +66,82 @@ body {
   font-size: 40px;
 }
 
-#header-login {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  padding-right: 100px;
-}
-
-#header-login .material-symbols-outlined {
-  font-size: 50px;
-}
-
-#login {
-  font-size: 20px;
-}
-
+/* Button */
 #header-button {
   width: 100%;
+  position: relative;
 }
 
-#header-button ul {
-  margin: 0 auto;
-  padding: 0;
-  width: 100%;
-  list-style-type: none;
-}
-
-#header-button ul li {
-  margin: 0 auto;
-  padding: 0 20px;
-  width: 100%;
-  display: inline;
-  cursor: pointer;
-}
-
-#header-button ul li a {
-  text-decoration: none;
+#header-button a {
+  font-size: 20px;
   color: #000;
-  font-size: 24px;
+  text-decoration: none;
+  position: relative;
+  z-index: 1;
+  /* background-color: #764c22; */
+  display: inline-block;
+  text-align: center;
+  /* font-size: ; */
 }
 
-#text-login {
-  width: 80px;
-  padding: 10px;
-  background-color: #764c22;
-  border-radius: 40px;
-  text-align: center;
+.animation {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  z-index: 0;
+  border-bottom: solid #764c22;
+  /* color: #fff; */
+  /* border-radius: 20px; */
+  transition: all 0.5s ease;
+}
+
+a:nth-child(1) {
+  margin: 0 5px;
+  /* background-color: #3312; */
+  padding: 10px 20px;
+  /* color: #fff; */
+}
+
+.start-home,
+a:nth-child(1):hover ~ .animation {
+  width: 50px;
+  left: 0;
+  margin: 0 5px;
+  padding: 0 20px;
+}
+.start-home,
+a:nth-child(1):hover ~ .animation:active {
   color: #fff;
+}
+
+a:nth-child(2) {
+  margin: 0 5px;
+  /* background-color: #3312; */
+  padding: 10px 20px;
+  border-radius: 20px;
+}
+
+.start-profile,
+a:nth-child(2):hover ~ .animation {
+  width: 50 px;
+  left: 110px;
+  margin: 0 5px;
+  padding: 0 20px;
+}
+
+a:nth-child(3) {
+  margin: 0 5px;
+  /* background-color: #3312; */
+  /* padding: 10px 20px; */
+  border-radius: 20px;
+}
+
+.start-product,
+a:nth-child(3):hover ~ .animation {
+  width: 70px;
+  left: 210px;
+  margin: 0 5px;
+  padding: 0 20px;
 }
 
 /* content */
@@ -385,4 +414,86 @@ body {
 
 #text-penjelasan {
   font-size: 20px;
+}
+
+/* Footer */
+#bg-footer {
+  width: 100%;
+  padding: 0;
+  /* margin: 250px 0 0 0; */
+}
+
+#co-footer {
+  width: 100%;
+  padding: 0;
+  margin: 0 auto;
+  background-color: #ead7c3;
+  color: #3a2922;
+}
+
+#footer {
+  width: 90%;
+  margin: 0 auto;
+  /* padding: 0 20px; */
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+#komit {
+  width: 40%;
+  padding: 0;
+  margin: 0 auto;
+  /* color: #fff; */
+  font-size: 16px;
+}
+
+#alamat {
+  width: 40%;
+  font-size: 16px;
+}
+
+#email-telp {
+  width: 20%;
+}
+
+#footer-email {
+  /* width: 25%; */
+  padding: 0;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
+}
+
+#img-footer-email img {
+  width: 30px;
+  /* height: 40px; */
+}
+
+#text-footer-email {
+  /* color: #fff; */
+}
+
+#footer-telp {
+  /* width: 25%; */
+  padding: 0;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
+  padding: 0 30px 0 0;
+}
+
+#img-footer-telp img {
+  width: 30px;
+  /* height: 40px; */
+}
+
+#text-footer-telp {
+  /* color: #fff; */
 }
