--- a/contact.css
+++ b/contact.css
@@ -140,6 +140,7 @@ a:nth-child(3):hover ~ .animation {
   margin: 0 5px;
   padding: 0 20px;
 }
+
 a:nth-child(4) {
   padding: 0 40px;
   /* background-color: #3312; */
@@ -153,68 +154,6 @@ a:nth-child(4):hover ~ .animation {
   left: 335px;
   margin: 0 5px;
   padding: 0 20px;
-}
-
-/* Content */
-#bg-content {
-  margin: 0 auto;
-  padding: 0;
-  width: 100%;
-  background-color: #764c22;
-}
-
-#co-content {
-  width: 90%;
-  margin: 0 auto;
-  padding: 20px 0 0 0;
-}
-
-#content {
-  /* border: solid; */
-  width: 100%;
-  padding: 0;
-  margin: 0 auto;
-  height: 520px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-}
-
-#gambar-content {
-  width: 500px;
-  height: 300px;
-  /* border: solid; */
-  border-radius: 20px;
-  box-shadow: 0 8px 8px rgba(32, 32, 32, 0.5);
-  border-radius: 30px;
-  background-color: #fff;
-}
-
-#gambar-content img {
-  width: 100%;
-  height: 100%;
-}
-
-#text-content {
-  height: 450px;
-  width: 100%;
-  color: #fff;
-}
-
-#judul {
-  font-size: 40px;
-  font-weight: bold;
-  margin-bottom: 30px;
-}
-
-#text {
-  font-size: 20px;
-}
-
-#text-1 {
-  font-size: 20px;
-  padding: 10px 0;
 }
 
 /* Contact */
@@ -234,6 +173,35 @@ a:nth-child(4):hover ~ .animation {
 }
 
 #contact {
+  /* border: solid; */
+  width: 100%;
+  padding: 0;
+  margin: 0 auto;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  gap: 30px;
+}
+
+/* Content */
+
+#bg-content {
+  margin: 0 auto;
+  /* padding: 80px 0 30px 0; */
+  width: 100%;
+  /* background-color: #764c22; */
+}
+
+#co-content {
+  width: 90%;
+  margin: 0 auto;
+  /* padding: 20px 0 0 0; */
+  background-color: #ead7c3;
+  border-radius: 50px;
+}
+
+#content {
   /* border: solid; */
   width: 100%;
   padding: 0;
@@ -326,16 +294,3 @@ a:nth-child(4):hover ~ .animation {
   padding: 20px 0 0 15px;
   margin: 0 auto;
 }
-/* #container-email {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-}
-
-#container-telp {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-} */
